Use unzip not tar -xvf

--- a/riddlc/action.yaml
+++ b/riddlc/action.yaml
@@ -41,6 +41,6 @@ runs:
         java-version: '17'
     - run: |
         wget --quiet https://github.com/reactific/riddl/releases/download/0.6.0/riddlc-0.6.0.zip
-        tar zxf riddlc-0.6.0.tgz
+        unzip riddlc-0.6.0.zip
         riddlc-0.6.0/bin/riddlc ${{ inputs.command }} ${{ inputs.opt1 }} ${{ inputs.opt2 }} ${{ inputs.opt3 }} ${{ inputs.opt4 }} ${{ inputs.opt5 }} ${{ inputs.opt6 }}  ${{ inputs.opt7 }} ${{ inputs.opt8 }}
       shell: bash
