--- a/riddlc/action.yaml
+++ b/riddlc/action.yaml
@@ -40,7 +40,8 @@ runs:
         distribution: 'temurin'
         java-version: '17'
     - run: |
-        wget --quiet https://github.com/reactific/riddl/releases/download/0.13.3/riddlc-0.13.3.zip
-        unzip riddlc-0.13.3.zip
-        riddlc-0.13.3/bin/riddlc ${{ inputs.command }} ${{ inputs.opt1 }} ${{ inputs.opt2 }} ${{ inputs.opt3 }} ${{ inputs.opt4 }} ${{ inputs.opt5 }} ${{ inputs.opt6 }}  ${{ inputs.opt7 }} ${{ inputs.opt8 }}
+        version = "0.13.3"
+        wget --quiet https://github.com/reactific/riddl/releases/download/${version}/riddlc-${version}.zip
+        unzip riddlc-${version}.zip
+        riddlc-${version}/bin/riddlc ${{ inputs.command }} ${{ inputs.opt1 }} ${{ inputs.opt2 }} ${{ inputs.opt3 }} ${{ inputs.opt4 }} ${{ inputs.opt5 }} ${{ inputs.opt6 }}  ${{ inputs.opt7 }} ${{ inputs.opt8 }}
       shell: bash
